--- a/.gitignore
+++ b/.gitignore
@@ -33,9 +33,19 @@ yarn-error.log*
 # env files (can opt-in for committing if needed)
 .env*
 
+# databases
+*.db
+*.db-journal
+prisma/dev.db*
+
+# url shortener data
+.url-data.json
+
 # vercel
 .vercel
 
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+/src/generated/prisma
