➕ migration + change name

--- a/package.json
+++ b/package.json
@@ -11,13 +11,14 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
-    "@libsql/client": "^0.15.14",
+    "@libsql/client": "^0.8.1",
     "@prisma/adapter-libsql": "^6.15.0",
     "@prisma/client": "^6.15.0",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "libsql": "^0.3.19",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "prisma": "^6.15.0",
